refactor(rag): rank-based RRF, status codes, scope timeouts, hardening
Addresses the external review of RAGService:

- R1: Replace weighted-score-sum dedup with textbook rank-based RRF
  (`weight × 1/(K + rank)` summed per stable key, K=60). Matches Cormack
  2009 and the formula Elasticsearch/Azure/Vespa describe.
- R2: `stableKey` now checks `source:chunkIndex` (what the workshop
  loader actually produces); the previous `chunk_id` check never matched
  in practice and silently fell through to text-only keying.
- R3: New `RagStatus` enum (ANSWERED, INSUFFICIENT_CONTEXT,
  RETRIEVAL_FAILED, GENERATION_FAILED, CANCELLED) propagated through
  `RagAnswer` and exposed via `RAGResponse` so clients can distinguish
  grounded answers from degraded ones without parsing strings.
- R4: 20s timeout on the multi-query/HyDE scope, 5s on the retrieval
  fan-out, via `StructuredTaskScope.open(joiner, cfg -> cfg.withTimeout)`.
- R5: Interrupt handling is honest now (CANCELLED propagated rather
  than the previous "proceed with whatever arrived" comment that ran
  on an empty list).
- R6: `safe*` wrappers null-guard the subtask results.
- R7: `query(...)` legacy String API marked @Deprecated, with javadoc
  explaining the `[Source N]` mapping disconnect.
- R8: `MIN_FUSED_SCORE` knob (default 0.0; raise to filter weak hits).
- R9: Chapter 02 Step 3 walkthrough rewritten to describe true RRF
  instead of the stale weighted-score-sum description.

Also: enable-preview for `spring-boot:run`, log-prefix consistency for
the boxed pipeline trace, debug logging on for module-02.

Tests: 17/17 pass.